style.css
body , html {
    background-color: black;
    height: 100vh;
    width: 100vw;

    margin:0;
    padding:0;
}

body {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    color: white;
    font-family: monospace, sans-serif;
    overflow: hidden;
}

pre {
    position: absolute;
    top: 0;
    margin-top: 2rem;

    font-size: clamp(0.1rem, 1.5vw, 1rem);
    font-weight: 900;
    max-width: 100%;

    /* text gradient */
    background: linear-gradient(to right,#ff46e6, #fed43b);
    -webkit-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    color: transparent;

    text-shadow: 0 0 1rem rgba(255,255,255,0.2);
}

form {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;

    background-color: #2b2b2b;
    
    margin: 1rem;
    border-radius: 1rem;    
    padding: 2rem;

    z-index: 1;
}

canvas {
    max-width: 100%;
    max-height: 50%;
}

.error {
    --error-position: 300%;

    display: flex;
    justify-content: center;
    align-items: center;

    position: absolute;
    bottom: 0;

    color: white;
    font-weight: 900;
    text-align: center;
    font-size: 1.5rem;

    border-radius: 1rem;
    padding: 1rem 2rem;
    margin: 1rem;

    transform: translate(0, var(--error-position));
    transition: transform 0.5s ease-in-out;
}
.error::after{
    content: attr(data-background);
    position: absolute;
    top: 0;
    left: 0;
    width: max-content;
    height: 100%;
    z-index: -1;
    
    color: #7b2b2b;
    white-space: pre;
    line-height: 0.9rem;
    text-align: center;
    font-size: 1rem;

    text-shadow: 0 0 0.5rem rgba(255,0,0,0.5);
}
.error p {
    margin: 0;
    width: 100%;
    text-align: center;
}
.error.show{
    --error-position: 0;
}


.fileDropOverlay {
    display: flex;
    justify-content: center;
    align-items: center;

    background-color: rgba(0,0,0,0.75);
    box-sizing: border-box;
    width: 100%;
    height: 100%;

    padding: 0;
    margin: 0;
    
    color: white;
    font-size: 4rem;
    font-weight: bold;
}
.fileDropOverlay:not([open]){
    display: none;
}

small {
    color: #999;
}

